--- a/PyBer_Challenge_starter_code.ipynb
+++ b/PyBer_Challenge_starter_code.ipynb
@@ -326,59 +326,56 @@
        "      <th>Average Fare per Ride</th>\n",
        "      <th>Average Fare per Driver</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>type\n",
-       "Rural        125\n",
-       "Suburban     625\n",
-       "Urban  ...</td>\n",
-       "      <td>type\n",
-       "Rural         78\n",
-       "Suburban     490\n",
-       "Urban  ...</td>\n",
-       "      <td>type\n",
-       "Rural        4327.93\n",
-       "Suburban    19356.33...</td>\n",
-       "      <td>type\n",
-       "Rural       34.623440\n",
-       "Suburban    30.9701...</td>\n",
-       "      <td>type\n",
-       "Rural       55.486282\n",
-       "Suburban    39.5027...</td>\n",
+       "      <th>Rural</th>\n",
+       "      <td>125</td>\n",
+       "      <td>78</td>\n",
+       "      <td>4327.93</td>\n",
+       "      <td>34.623440</td>\n",
+       "      <td>55.486282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Suburban</th>\n",
+       "      <td>625</td>\n",
+       "      <td>490</td>\n",
+       "      <td>19356.33</td>\n",
+       "      <td>30.970128</td>\n",
+       "      <td>39.502714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Urban</th>\n",
+       "      <td>1625</td>\n",
+       "      <td>2405</td>\n",
+       "      <td>39854.38</td>\n",
+       "      <td>24.525772</td>\n",
+       "      <td>16.571468</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         Total Rides  \\\n",
-       "0  type\n",
-       "Rural        125\n",
-       "Suburban     625\n",
-       "Urban  ...   \n",
+       "          Total Rides  Total Drivers  Total Fares  Average Fare per Ride  \\\n",
+       "type                                                                       \n",
+       "Rural             125             78      4327.93              34.623440   \n",
+       "Suburban          625            490     19356.33              30.970128   \n",
+       "Urban            1625           2405     39854.38              24.525772   \n",
        "\n",
-       "                                       Total Drivers  \\\n",
-       "0  type\n",
-       "Rural         78\n",
-       "Suburban     490\n",
-       "Urban  ...   \n",
-       "\n",
-       "                                         Total Fares  \\\n",
-       "0  type\n",
-       "Rural        4327.93\n",
-       "Suburban    19356.33...   \n",
-       "\n",
-       "                               Average Fare per Ride  \\\n",
-       "0  type\n",
-       "Rural       34.623440\n",
-       "Suburban    30.9701...   \n",
-       "\n",
-       "                             Average Fare per Driver  \n",
-       "0  type\n",
-       "Rural       55.486282\n",
-       "Suburban    39.5027...  "
+       "          Average Fare per Driver  \n",
+       "type                               \n",
+       "Rural                   55.486282  \n",
+       "Suburban                39.502714  \n",
+       "Urban                   16.571468  "
       ]
      },
      "execution_count": 8,
@@ -389,18 +386,18 @@
    "source": [
     "#  6. Create a PyBer summary DataFrame. \n",
     "pyber_summary_df = pd.DataFrame(\n",
-    "        [{'Total Rides' : total_rides_by_type,\n",
+    "        {'Total Rides' : total_rides_by_type,\n",
     "         'Total Drivers' : total_drivers_by_type,\n",
     "         'Total Fares' : total_fares_by_type,\n",
     "         'Average Fare per Ride' : average_fare_per_ride_for_type,\n",
-    "         'Average Fare per Driver' : average_fare_per_driver_for_type}])\n",
+    "         'Average Fare per Driver' : average_fare_per_driver_for_type})\n",
     "\n",
     "pyber_summary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,32 +436,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "date                 type    \n",
-       "2019-01-01 00:08:16  Urban       37.91\n",
-       "2019-01-01 00:46:46  Suburban    47.74\n",
-       "2019-01-01 02:07:24  Suburban    24.07\n",
-       "2019-01-01 03:46:50  Urban        7.57\n",
-       "2019-01-01 05:23:21  Urban       10.75\n",
-       "                                 ...  \n",
-       "2019-05-08 04:20:00  Urban       21.99\n",
-       "2019-05-08 04:39:49  Urban       18.45\n",
-       "2019-05-08 07:29:01  Urban       18.55\n",
-       "2019-05-08 11:38:35  Urban       19.77\n",
-       "2019-05-08 13:10:18  Urban       18.04\n",
-       "Name: fare, Length: 2375, dtype: float64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2. Using groupby() to create a new DataFrame showing the sum of the fares \n",
     "#  for each date where the indices are the city type and date.\n",
@@ -474,129 +448,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>type</th>\n",
-       "      <th>fare</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2019-01-01 00:08:16</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>37.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2019-01-01 00:46:46</td>\n",
-       "      <td>Suburban</td>\n",
-       "      <td>47.74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2019-01-01 02:07:24</td>\n",
-       "      <td>Suburban</td>\n",
-       "      <td>24.07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2019-01-01 03:46:50</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>7.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2019-01-01 05:23:21</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>10.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2370</th>\n",
-       "      <td>2019-05-08 04:20:00</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>21.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2371</th>\n",
-       "      <td>2019-05-08 04:39:49</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>18.45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2372</th>\n",
-       "      <td>2019-05-08 07:29:01</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>18.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2373</th>\n",
-       "      <td>2019-05-08 11:38:35</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>19.77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2374</th>\n",
-       "      <td>2019-05-08 13:10:18</td>\n",
-       "      <td>Urban</td>\n",
-       "      <td>18.04</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2375 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     date      type   fare\n",
-       "0     2019-01-01 00:08:16     Urban  37.91\n",
-       "1     2019-01-01 00:46:46  Suburban  47.74\n",
-       "2     2019-01-01 02:07:24  Suburban  24.07\n",
-       "3     2019-01-01 03:46:50     Urban   7.57\n",
-       "4     2019-01-01 05:23:21     Urban  10.75\n",
-       "...                   ...       ...    ...\n",
-       "2370  2019-05-08 04:20:00     Urban  21.99\n",
-       "2371  2019-05-08 04:39:49     Urban  18.45\n",
-       "2372  2019-05-08 07:29:01     Urban  18.55\n",
-       "2373  2019-05-08 11:38:35     Urban  19.77\n",
-       "2374  2019-05-08 13:10:18     Urban  18.04\n",
-       "\n",
-       "[2375 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. Reset the index on the DataFrame you created in #1. This is needed to use the 'pivot()' function.\n",
     "fares_by_date_df = fares_by_date_df.reset_index()\n",
