deliv 1 complete, deliv 2 up to resample

--- a/PyBer_Challenge.ipynb
+++ b/PyBer_Challenge.ipynb
@@ -350,11 +350,35 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date                 type    \n",
+       "2019-01-01 00:08:16  Urban       37.91\n",
+       "2019-01-01 00:46:46  Suburban    47.74\n",
+       "2019-01-01 02:07:24  Suburban    24.07\n",
+       "2019-01-01 03:46:50  Urban        7.57\n",
+       "2019-01-01 05:23:21  Urban       10.75\n",
+       "                                 ...  \n",
+       "2019-05-08 04:20:00  Urban       21.99\n",
+       "2019-05-08 04:39:49  Urban       18.45\n",
+       "2019-05-08 07:29:01  Urban       18.55\n",
+       "2019-05-08 11:38:35  Urban       19.77\n",
+       "2019-05-08 13:10:18  Urban       18.04\n",
+       "Name: fare, Length: 2375, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2. Using groupby() to create a new DataFrame showing the sum of the fares \n",
     "#  for each date where the indices are the city type and date.\n",
-    "fares_by_date_df = pyber_data_df.groupby(['date','type']).sum()['fare']"
+    "fares_by_date_df = pyber_data_df.groupby(['date','type']).sum()['fare']\n",
+    "fares_by_date_df"
    ]
   },
   {
@@ -633,52 +657,301 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'date'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3621\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3620\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3621\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3622\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\_libs\\index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\_libs\\index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5198\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5206\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'date'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m start_date \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2019-1-1\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      3\u001b[0m end_date \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2019-4-29\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 4\u001b[0m filt \u001b[38;5;241m=\u001b[39m ((\u001b[43mfares_by_date_pivot\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdate\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m start_date) \u001b[38;5;241m&\u001b[39m (fares_by_date_pivot[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m end_date))\n\u001b[0;32m      5\u001b[0m fares_by_date_pivot\u001b[38;5;241m.\u001b[39mloc[filt]\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\frame.py:3505\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3503\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   3504\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3505\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3506\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3507\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3621\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3622\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m-> 3623\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3624\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3625\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3626\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3627\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3628\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'date'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>type</th>\n",
+       "      <th>Rural</th>\n",
+       "      <th>Suburban</th>\n",
+       "      <th>Urban</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:08:16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:46:46</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>47.74</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 02:07:24</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.07</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 03:46:50</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 05:23:21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 14:28:36</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 16:29:16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 17:26:52</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 17:38:09</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.87</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 19:35:03</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.96</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2196 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "type                 Rural  Suburban  Urban\n",
+       "date                                       \n",
+       "2019-01-01 00:08:16    NaN       NaN  37.91\n",
+       "2019-01-01 00:46:46    NaN     47.74    NaN\n",
+       "2019-01-01 02:07:24    NaN     24.07    NaN\n",
+       "2019-01-01 03:46:50    NaN       NaN   7.57\n",
+       "2019-01-01 05:23:21    NaN       NaN  10.75\n",
+       "...                    ...       ...    ...\n",
+       "2019-04-28 14:28:36    NaN       NaN  11.46\n",
+       "2019-04-28 16:29:16    NaN       NaN  36.42\n",
+       "2019-04-28 17:26:52    NaN       NaN  31.43\n",
+       "2019-04-28 17:38:09    NaN     34.87    NaN\n",
+       "2019-04-28 19:35:03    NaN     16.96    NaN\n",
+       "\n",
+       "[2196 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 5. Create a new DataFrame from the pivot table DataFrame using loc on the given dates, '2019-01-01':'2019-04-29'.\n",
-    "start_date = '2019-1-1'\n",
-    "end_date = '2019-4-29'\n",
-    "filt = ((fares_by_date_pivot['date'] >= start_date) & (fares_by_date_pivot['date'] <= end_date))\n",
-    "#fares_by_date_pivot.loc[filt]"
+    "new_fares_by_date_pivot = fares_by_date_pivot.loc['2019-01-01 00':'2019-04-29']\n",
+    "new_fares_by_date_pivot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>type</th>\n",
+       "      <th>Rural</th>\n",
+       "      <th>Suburban</th>\n",
+       "      <th>Urban</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:08:16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 00:46:46</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>47.74</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 02:07:24</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.07</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 03:46:50</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-01 05:23:21</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 14:28:36</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 16:29:16</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 17:26:52</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 17:38:09</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.87</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-04-28 19:35:03</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>16.96</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2196 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "type                 Rural  Suburban  Urban\n",
+       "date                                       \n",
+       "2019-01-01 00:08:16    NaN       NaN  37.91\n",
+       "2019-01-01 00:46:46    NaN     47.74    NaN\n",
+       "2019-01-01 02:07:24    NaN     24.07    NaN\n",
+       "2019-01-01 03:46:50    NaN       NaN   7.57\n",
+       "2019-01-01 05:23:21    NaN       NaN  10.75\n",
+       "...                    ...       ...    ...\n",
+       "2019-04-28 14:28:36    NaN       NaN  11.46\n",
+       "2019-04-28 16:29:16    NaN       NaN  36.42\n",
+       "2019-04-28 17:26:52    NaN       NaN  31.43\n",
+       "2019-04-28 17:38:09    NaN     34.87    NaN\n",
+       "2019-04-28 19:35:03    NaN     16.96    NaN\n",
+       "\n",
+       "[2196 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 6. Set the \"date\" index to datetime datatype. This is necessary to use the resample() method in Step 8.\n",
-    "# df.index = pd.to_datetime(df.index)"
+    "new_fares_by_date_pivot.index = pd.to_datetime(new_fares_by_date_pivot.index)\n",
+    "new_fares_by_date_pivot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 2196 entries, 2019-01-01 00:08:16 to 2019-04-28 19:35:03\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   Rural     114 non-null    float64\n",
+      " 1   Suburban  573 non-null    float64\n",
+      " 2   Urban     1509 non-null   float64\n",
+      "dtypes: float64(3)\n",
+      "memory usage: 68.6 KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7. Check that the datatype for the index is datetime using df.info()\n"
+    "# 7. Check that the datatype for the index is datetime using df.info()\n",
+    "new_fares_by_date_pivot.info()"
    ]
   },
   {
